--- a/nodejs-mysql-tienda-productos/views/productos/agregar.ejs
+++ b/nodejs-mysql-tienda-productos/views/productos/agregar.ejs
@@ -8,19 +8,14 @@
                 name="nombre">
         </div>
         <div class="form-group">
-            <label for="email">Email</label>
-            <input required id="email" placeholder="Email del producto" class="form-control" type="text"
-                name="email">
+            <label for="precio">Precio</label>
+            <input required id="precio" placeholder="Precio del producto" class="form-control" type="number"
+                name="precio">
         </div>
         <div class="form-group">
-            <label for="genero">Genero</label>
-            <input required id="genero" placeholder="Genero del producto" class="form-control" type="text"
-                name="genero">
-        </div>
-        <div class="form-group">
-            <label for="contraseña">Contraseña</label>
-            <input required id="contraseña" placeholder="Contraseña del producto" class="form-control" type="text"
-                name="contraseña">
+            <label for="nombre2">Nombre2</label>
+            <input required id="nombre2" placeholder="Nombre2 del producto" class="form-control" type="text"
+                name="nombre2">
         </div>
         <div class="form-group">
             <button class="btn btn-success">Guardar</button>
