--- a/nodejs-mysql-tienda-productos/views/productos/editar.ejs
+++ b/nodejs-mysql-tienda-productos/views/productos/editar.ejs
@@ -10,19 +10,9 @@
                 class="form-control" type="text" name="nombre">
         </div>
         <div class="form-group">
-            <label for="email">Email</label>
-            <input value="<%= producto.email %>" required id="email" placeholder="Email del producto"
-                class="form-control" type="text" name="email">
-        </div>
-        <div class="form-group">
-            <label for="genero">Genero</label>
-            <input value="<%= producto.genero %>" required id="genero" placeholder="Genero del producto"
-                class="form-control" type="text" name="genero">
-        </div>
-        <div class="form-group">
-            <label for="contraseña">Contraseña</label>
-            <input value="<%= producto.contraseña %>" required id="contraseña" placeholder="Contraseña del producto"
-                class="form-control" type="text" name="contraseña">
+            <label for="precio">Precio</label>
+            <input value="<%= producto.precio %>" required id="precio" placeholder="Precio del producto"
+                class="form-control" type="number" name="precio">
         </div>
         <div class="form-group">
             <button class="btn btn-success">Guardar</button>
