--- a/nodejs-mysql-tienda-productos/views/productos/ver.ejs
+++ b/nodejs-mysql-tienda-productos/views/productos/ver.ejs
@@ -7,7 +7,6 @@
             <tr>
                 <th>Nombre</th>
                 <th>Email</th>
-                <th>Genero</th>
                 <th>Contraseña</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
@@ -17,8 +16,7 @@
             <% productos.forEach(producto => { %>
             <tr>
                 <td><%= producto.nombre %></td>
-                <td><%= producto.precio %></td>
-                <td><%= producto.genero %></td>
+                <td><%= producto.email %></td>
                 <td><%= producto.contraseña %></td>
                 <td>
                     <a href="/productos/editar/<%= producto.id %>" class="btn btn-warning">
