--- a/nodejs-mysql-tienda-productos/views/productos/agregar.ejs
+++ b/nodejs-mysql-tienda-productos/views/productos/agregar.ejs
@@ -9,8 +9,13 @@
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input required id="email" placeholder="Email del producto" class="form-control" type="number"
+            <input required id="email" placeholder="Email del producto" class="form-control" type="text"
                 name="email">
+        </div>
+        <div class="form-group">
+            <label for="genero">Genero</label>
+            <input required id="genero" placeholder="Genero del producto" class="form-control" type="text"
+                name="genero">
         </div>
         <div class="form-group">
             <label for="contraseña">Contraseña</label>
