--- a/nodejs-mysql-tienda-productos/views/productos/ver.ejs
+++ b/nodejs-mysql-tienda-productos/views/productos/ver.ejs
@@ -7,6 +7,7 @@
             <tr>
                 <th>Nombre</th>
                 <th>Email</th>
+                <th>Genero</th>
                 <th>Contraseña</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
@@ -15,9 +16,10 @@
         <tbody>
             <% productos.forEach(producto => { %>
             <tr>
-                <td><%= producto.nombre %></td>
-                <td><%= producto.email %></td>
-                <td><%= producto.contraseña %></td>
+                <td><%= usuario.nombre %></td>
+                <td><%= usuario.email %></td>
+                <td><%= usuario.genero %></td>
+                <td><%= usuario.contraseña %></td>
                 <td>
                     <a href="/productos/editar/<%= producto.id %>" class="btn btn-warning">
                         Editar
