--- a/nodejs-mysql-tienda-productos/views/productos/ver.ejs
+++ b/nodejs-mysql-tienda-productos/views/productos/ver.ejs
@@ -6,9 +6,8 @@
         <thead>
             <tr>
                 <th>Nombre</th>
-                <th>Email</th>
-                <th>Genero</th>
-                <th>Contraseña</th>
+                <th>Precio</th>
+                <th>Nombre2</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
             </tr>
@@ -16,10 +15,9 @@
         <tbody>
             <% productos.forEach(producto => { %>
             <tr>
-                <td><%= usuario.nombre %></td>
-                <td><%= usuario.email %></td>
-                <td><%= usuario.genero %></td>
-                <td><%= usuario.contraseña %></td>
+                <td><%= producto.nombre %></td>
+                <td><%= producto.precio %></td>
+                <td><%= producto.nombre2 %></td>
                 <td>
                     <a href="/productos/editar/<%= producto.id %>" class="btn btn-warning">
                         Editar
