--- a/nodejs-mysql-tienda-productos/views/header.ejs
+++ b/nodejs-mysql-tienda-productos/views/header.ejs
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="menu">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/productos">Ver</a>
+                    <a class="nav-link" href="/usuarios">Ver</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/productos/agregar">Agregar</a>
+                    <a class="nav-link" href="/usuarios/agregar">Agregar</a>
                 </li>
             </ul>
         </div>
