--- a/nodejs-mysql-tienda-productos/views/index.ejs
+++ b/nodejs-mysql-tienda-productos/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <p>Estás mirando la página de inicio, navega a 
-      <a href="/productos">/productos</a>
+      <a href="/usuarios">/usuarios</a>
       para ver la app web
     </p>
   </body>
