--- a/nodejs-mysql-tienda-productos/views/usuarios/editar.ejs
+++ b/nodejs-mysql-tienda-productos/views/usuarios/editar.ejs
@@ -1,27 +1,27 @@
 <%- include("../header"); %>
 <div class="col-12">
-    <h1>Editar producto</h1>
+    <h1>Editar usuario</h1>
     <form method="post" action="/usuarios/actualizar">
 
-        <input value="<%= producto.id %>" name="id" type="hidden">
+        <input value="<%= usuario.id %>" name="id" type="hidden">
         <div class="form-group">
             <label for="nombre">Nombre</label>
-            <input value="<%= producto.nombre %>" required id="nombre" placeholder="Nombre del usuario"
+            <input value="<%= usuario.nombre %>" required id="nombre" placeholder="Nombre del usuario"
                 class="form-control" type="text" name="nombre">
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input value="<%= producto.email %>" required id="email" placeholder="Email del usuario"
+            <input value="<%= usuario.email %>" required id="email" placeholder="Email del usuario"
                 class="form-control" type="text" name="email">
         </div>
         <div class="form-group">
             <label for="genero">Genero</label>
-            <input value="<%= producto.genero %>" required id="genero" placeholder="Genero del usuario"
+            <input value="<%= usuario.genero %>" required id="genero" placeholder="Genero del usuario"
                 class="form-control" type="text" name="genero">
         </div>
         <div class="form-group">
             <label for="contraseña">Contraseña</label>
-            <input value="<%= producto.contraseña %>" required id="contraseña" placeholder="Contraseña del usuario"
+            <input value="<%= usuario.contraseña %>" required id="contraseña" placeholder="Contraseña del usuario"
                 class="form-control" type="text" name="contraseña">
         </div>
         <div class="form-group">
