--- a/nodejs-mysql-tienda-productos/views/header.ejs
+++ b/nodejs-mysql-tienda-productos/views/header.ejs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Conexión MySQL y Node">
     <meta name="author" content="Parzibyte">
-    <title>Conexión MySQL y Node</title>
+    <title>NODO_Eafit</title>
     <!-- Cargar el CSS de Boostrap-->
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
     <!-- Cargar estilos propios -->
