--- a/NODO_Eafit/views/header.ejs
+++ b/NODO_Eafit/views/header.ejs
@@ -21,7 +21,7 @@
 <body>
     <!-- Definición del menú -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" target="_blank" href="//parzibyte.me/blog">NODO_Eafit</a>
+        <a class="navbar-brand" target="_blank" href="/views">NODO_Eafit</a>
         <button aria-label="Mostrar u ocultar menú" class="navbar-toggler" id="botonMenu" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
