--- a/NODO_Eafit/views/index.ejs
+++ b/NODO_Eafit/views/index.ejs
@@ -8,7 +8,11 @@
     <h1><%= title %></h1>
     <p>Estás mirando la página de inicio, navega a 
       <a href="/usuarios">/usuarios</a>
-      para ver la app web
+      para ver la app web.
+      Integrantes:  Andrés Julián Gil Nagles
+                    Juan David Zapata Moncada
+                    Santiago Henao Ramírez
+      
     </p>
   </body>
 </html>
