--- a/NODO_Eafit/views/index.ejs
+++ b/NODO_Eafit/views/index.ejs
@@ -8,11 +8,15 @@
     <h1><%= title %></h1>
     <p>Estás mirando la página de inicio, navega a 
       <a href="/usuarios">/usuarios</a>
-      para ver la app web.
-      Integrantes:  Andrés Julián Gil Nagles
-                    Juan David Zapata Moncada
-                    Santiago Henao Ramírez
-      
+      para ver la app web
+      <br>
+      Integrantes:
+      <br>
+      Andrés Julián Gil Nagles
+      <br>
+      Juan David Zapata Moncada
+      <br>
+      Santiago Henao Ramírez
     </p>
   </body>
 </html>
